@startuml
'https://plantuml.com/class-diagram

abstract class Instrument
class Percussion
class Mstring
class Wind
class Drum
class Piano
class Guitar
class Bas
class Trumpet

Instrument <|-- Percussion
Instrument <|-- Mstring
Instrument <|-- Wind
Percussion <|-- Drum
Mstring <|-- Piano
Mstring <|-- Guitar
Mstring <|-- Bas
Wind <|-- Trumpet

Instrument : abstract void play()
Instrument : abstract void tune()
Instrument : update()

Percussion : void tune()
Percussion : update()

Wind : void play()
Wind : void tune()
Wind : update()

Mstring : void play()
Mstring : void tune()
Mstring : update()

Drum : Override void play()


@enduml